docs: align CLAUDE.md and architecture.md with current state
Bugungi merge va arxitektura qarorlari asosida hujjatlarni current state bilan moslashtirish.

CLAUDE.md:
- Java 21 -> 25 LTS, Spring Boot 4.0.2 -> 4.0.6
- Universitet soni: 230 -> 224 (real ekosistem soni)
- Audit DB (hemis_audit) eslatmasi qo'shildi

.claude/architecture.md:
- 4-modul: api-university qo'shildi (B2B 224 OTM uchun)
- "Audit DB" alohida bo'lim: schema yaratish (Spring init), HikariCP pool sizing, configuration
- Two separate PostgreSQL instances diagrammasi
- Resource Requirements: 230 -> 224
- Docker base image: Java 21 -> 25 LTS
- Module dependency graph yangilandi

domain/CLAUDE.md:
- "230" -> "224"
- Schema Separation Rules bekor qilindi -> Naming Convention (Single Schema)
  Sabab: cross-schema FK overhead, hemis_337 (224 OTM) ekosistemi mosligi
- Connection pool sizing: architecture.md ga reference (DRY)

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>