@@ -16,12 +16,12 @@
 ## Clean Architecture Layers
 
 ```
-┌──────────────────────────────────────────────────┐
-│                Presentation Layer                 │
-│  ┌────────────┬──────────┬─────────────────────┐ │
-│  │ api-legacy │ api-web  │   api-external      │ │
-│  │ (CUBA API) │(Modern)  │   (S2S)             │ │
-│  └──────┬─────┴────┬─────┴──────┬──────────────┘ │
+┌─────────────────────────────────────────────────────────────────┐
+│                      Presentation Layer                          │
+│  ┌────────────┬──────────┬─────────────────┬─────────────────┐  │
+│  │ api-legacy │ api-web  │ api-university  │  api-external   │  │
+│  │ (CUBA API) │(Modern)  │ (B2B 224 OTM)   │  (MyGov/OneID)  │  │
+│  └──────┬─────┴────┬─────┴────────┬────────┴─────┬───────────┘  │
 ├──────────────────────────────────────────────────┤
 │                Application Layer                  │
 │  app: Configuration, Exception Handling, Auth     │
@@ -41,13 +41,13 @@
 ### Module Dependency Graph
 
 ```
-                      app
-                       │
-    ┌──────────────────┼──────────────────┐
-    │                  │                  │
-api-legacy         api-web         api-external
-    │                  │                  │
-    └──────────────────┼──────────────────┘
+                              app
+                               │
+    ┌──────────────┬───────────┼───────────┬──────────────┐
+    │              │           │           │              │
+api-legacy     api-web    api-university api-external    │
+    │              │           │           │              │
+    └──────────────┴───────────┼───────────┴──────────────┘
                        │
                     service
                        │
@@ -124,10 +124,23 @@ Base Path: /app/rest/v2/*
 Dependencies: common, domain, service
 ```
 
+### `api-university` — University B2B sync
+```
+api-university/src/main/java/uz/hemis/api/university/
+├── controller/       # OAuth2 token + building/student sync endpoints
+│   └── auth/UniversityOAuthTokenController  # client_credentials grant
+└── ...
+Base Path: /api/v1/university/*
+Security: OAuth 2.0 client_credentials (oauth_client jadval)
+Dependencies: common, domain, service
+Maqsad: 224 ta OTM PHP backend bilan B2B sync. Hozirgi /app/rest/v2/oauth/token
+        password grant'dan TDB'ga muqobil — secret rotation, IP whitelist, per-client rate limit.
+```
+
 ### `api-external` — Server-to-Server
 ```
 api-external/src/main/java/uz/hemis/api/external/
-├── controller/       # 6 integration endpoints
+├── controller/       # 6 integration endpoints (MyGov, OneID, kelajakdagi shartnomalar)
 └── client/           # External API clients
 Base Path: /api/v1/external/*
 Security: API Key + IP Whitelist
@@ -150,7 +163,29 @@ Dependencies: ALL modules
 
 ---
 
-## Database: Master-Replica Routing
+## Database: Two Separate PostgreSQL Instances
+
+```
+                          Application
+                              │
+            ┌─────────────────┴─────────────────┐
+            ▼                                   ▼
+   ┌────────────────────┐              ┌────────────────────┐
+   │   hemis (asosiy)   │              │  hemis_audit       │
+   │   ────────────     │              │  ──────────────    │
+   │   Master + Replica │              │  Master + Replica  │
+   │   (Streaming)      │              │  (Streaming)       │
+   │                    │              │                    │
+   │   31 ta jadval     │              │  3 ta jadval       │
+   │   (V001..V014)     │              │  - activity_log    │
+   │                    │              │  - error_log       │
+   │                    │              │  - login_log       │
+   │   Soft delete      │              │  REVOKE UPD,DEL    │
+   │   Foreign keys     │              │  (immutable)       │
+   └────────────────────┘              └────────────────────┘
+```
+
+### Asosiy DB: Master-Replica Routing
 
 ```
 Application → Dynamic Routing (@ReadOnly annotation)
@@ -171,8 +206,32 @@ Application → Dynamic Routing (@ReadOnly annotation)
 
 | Pool | max-pool-size | min-idle | Notes |
 |------|---------------|----------|-------|
-| Master | 10 | 2 | Write + fallback read |
-| Replica | 20 | 5 | Read-only, `read-only: true` |
+| Master (asosiy) | 10 | 2 | Write + fallback read |
+| Replica (asosiy) | 20 | 5 | Read-only, `read-only: true` |
+| Audit Master | 5 | 1 | Insert-only (audit yozuvlari) |
+| Audit Replica | 10 | 2 | Read-only (audit UI) |
+
+### Audit DB (alohida)
+
+**Maqsad:** Kompyuter va xavfsizlik audit logi asosiy DB'dan ALOHIDA `hemis_audit` bazasida saqlanadi.
+
+**Sabab:**
+- Performance izolyatsiya: 1M+ insert/kun audit log asosiy DB ga ta'sir qilmaydi
+- Backup farqi: audit 5+ yil saqlanadi (compliance), asosiy DB tezroq
+- Xavfsizlik: `REVOKE UPDATE, DELETE ON activity_log FROM PUBLIC` (immutability)
+
+**Schema yaratish:** Liquibase EMAS — Spring `AuditDataSourceConfig.java` orqali
+`ResourceDatabasePopulator` bilan boot paytida (faqat master).
+
+**Fayllar:** `app/src/main/resources/db/audit/V001_create_activity_log.sql` va h.k.
+
+**Konfiguratsiya:**
+```yaml
+hemis.audit.enabled: true
+hemis.audit.datasource.master.url: jdbc:postgresql://localhost:5434/hemis_audit
+hemis.audit.datasource.replica.url: <fallback master>
+hemis.audit.redact-fields: password,token,secret  # Sensitive fields masking
+```
 
 ---
 
@@ -251,20 +310,20 @@ Application
 
 ```dockerfile
 # Build
-FROM eclipse-temurin:21-jdk-alpine AS builder
+FROM eclipse-temurin:25-jdk-alpine AS builder
 WORKDIR /app
 COPY . .
 RUN ./gradlew :app:bootJar -x test --no-daemon
 
 # Run
-FROM eclipse-temurin:21-jre-alpine
+FROM eclipse-temurin:25-jre-alpine
 WORKDIR /app
 COPY --from=builder /app/app/build/libs/*.jar app.jar
 EXPOSE 8081
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "--enable-preview", "-jar", "app.jar"]
 ```
 
-### Resource Requirements (230 universitet, ~1.15M talaba)
+### Resource Requirements (224 universitet, ~1.15M talaba)
 
 **Production cluster (minimum 3 instances behind LB):**
 
